js/src/tests/test262/built-ins/Number/NEGATIVE_INFINITY/S15.7.3.5_A2.js
verifyNotWritable
(
Number
"
NEGATIVE_INFINITY
"
null
1
)
;
if
(
isFinite
(
Number
.
NEGATIVE_INFINITY
)
)
{
ERROR
(
'
#
1
:
Number
.
NEGATIVE_INFINITY
=
1
;
Number
.
NEGATIVE_INFINITY
=
=
=
-
Infinity
'
)
;
}
else
{
if
(
Number
.
NEGATIVE_INFINITY
>
=
0
)
{
ERROR
(
'
#
1
:
Number
.
NEGATIVE_INFINITY
=
1
;
Number
.
NEGATIVE_INFINITY
=
=
=
-
Infinity
'
)
;
}
}
reportCompare
(
0
0
)
;
